<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.infopanel.DescriptionPanelFragment">

    <EditText
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:scrollbars = "vertical"
        android:gravity="top"
        android:hint="@string/info_panel_title_edit"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollHorizontally="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="154dp"
        android:autofillHints=""
        android:gravity="center_vertical"
        android:hint="@string/description_text_field"
        android:inputType="text"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/to_image_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:targetApi="o"
        />

    <Button
        android:id="@+id/to_image_add"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/proceed_image_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

</android.support.constraint.ConstraintLayout>